# DJANGO_mb

./: db.sqlite3  pyproject.toml
mb_project/: settings.py  urls.py
posts/: admin.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/: home.html
